--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,70 @@
+# Compiled source #
+###################
+*.com
 *.class
+*.dll
+*.exe
+*.o
+*.so
+server_log_home_IS_UNDEFINED
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
 *.jar
-*.war
-*.ear
+*.rar
+*.tar
+*.zip
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Logs and databases #
+######################
+*.log
 
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# Windows
-# =========================
-
-# Windows image file caches
-Thumbs.db
+# OS generated files #
+######################
+.DS_Store*
 ehthumbs.db
+Icon?
+Thumbs.db
 
-# Folder config file
-Desktop.ini
+# Editor Files #
+################
+*~
+*.swp
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# Gradle Files #
+################
+.gradle
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# Build output directies
+/target
+*/target
+/build
+*/build
+var
+logs
 
-# Windows shortcuts
-*.lnk
-
-#Idea files
+# IntelliJ specific files/directories
+out
+.idea
+*.ipr
+*.iws
 *.iml
-.idea/*
-.idea*
-/.idea*
+atlassian-ide-plugin.xml
+
+# Eclipse specific files/directories
+.classpath
+.project
+.settings
+.metadata
+.recommenders
+
+# NetBeans specific files/directories
+.nbattrs
+*.orig
 
