--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,20 @@
 
     <modules>
         <module>nifeng-develop-core</module>
+        <module>nifeng-develop-server</module>
+        <module>nifeng-devlep-task</module>
     </modules>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring-version>4.2.0.RELEASE</spring-version>
+        <jetty-verion>8.1.5.v20120716</jetty-verion>
+        <mysql-version>5.1.36</mysql-version>
+        <redis-version>2.7.3</redis-version>
+        <commons-lang3-version>3.4</commons-lang3-version>
+        <common-dbcp-version>1.2.1</common-dbcp-version>
+        <logback-version>1.1.2</logback-version>
+        <main.version>1.0-SNAPSHOT</main.version>
+    </properties>
     <repositories>
         <repository>
             <id>central</id>
