--- a/nifeng-develop-server/pom.xml
+++ b/nifeng-develop-server/pom.xml
@@ -15,17 +15,6 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <url>http://maven.apache.org</url>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-version>4.2.0.RELEASE</spring-version>
-        <jetty-verion>8.1.5.v20120716</jetty-verion>
-        <mysql-version>5.1.36</mysql-version>
-        <redis-version>2.7.3</redis-version>
-        <commons-lang3-version>3.4</commons-lang3-version>
-        <common-dbcp-version>1.2.1</common-dbcp-version>
-        <main.version>1.0-SNAPSHOT</main.version>
-    </properties>
     <dependencies>
         <!--jetty dependency-->
         <dependency>
@@ -91,32 +80,20 @@
             <version>${mysql-version}</version>
         </dependency>
         <!--redis dependency-->
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>${redis-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3-version}</version>
-        </dependency>
+
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
             <version>${common-dbcp-version}</version>
         </dependency>
-        <!--logback dependency-->
+
+        <!--file upload dependency-->
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>${logback-version}</version>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${common-fileupload-version}</version>
         </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback-version}</version>
-        </dependency>
+
     </dependencies>
 
     <profiles>
