--- a/nifeng-develop-server/src/main/webapp/WEB-INF/web.xml
+++ b/nifeng-develop-server/src/main/webapp/WEB-INF/web.xml
@@ -45,7 +45,7 @@
 	<filter>
 		<filter-name>userFilter</filter-name>
 		<filter-class>
-			com.nifeng.filter.UserFilter
+			com.nifeng.server.filter.UserFilter
 		</filter-class>
 	</filter>
 	<filter-mapping>
