--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
     <modules>
         <module>nifeng-develop-core</module>
         <module>nifeng-develop-server</module>
-        <module>nifeng-devlep-task</module>
+        <module>nifeng-develop-task</module>
+        <module>nifeng-develop-util</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,8 +22,12 @@
         <mysql-version>5.1.36</mysql-version>
         <redis-version>2.7.3</redis-version>
         <commons-lang3-version>3.4</commons-lang3-version>
-        <common-dbcp-version>1.2.1</common-dbcp-version>
+        <common-dbcp-version>1.4</common-dbcp-version>
         <logback-version>1.1.2</logback-version>
+        <common-fileupload-version>1.3.1</common-fileupload-version>
+        <json-version>20141113</json-version>
+        <common-collections-version>3.2.1</common-collections-version>
+        <common-httpclient-version>3.1</common-httpclient-version>
         <main.version>1.0-SNAPSHOT</main.version>
     </properties>
     <repositories>
@@ -43,6 +48,27 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>${common-collections-version}</version>
+        </dependency>
+        <!--logback dependency-->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback-version}</version>
         </dependency>
     </dependencies>
 
